# Ffmpeg

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/video/: juren.ts  test.v
app/src/main/cpp/: CMakeLists.txt  ffmpeg.cpp  ffmpeg.h  native-lib.cpp
app/src/main/java/com/smartdevice/ffmpeg/: AssectsUtil.java  MainActivity.java  TestType.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
